# my-superapp

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  packages.txt  pyproject.toml
.streamlit/: config.toml  secrets.toml.example
app/: Home.py
app/pages/: 🎯_Computer_Vision_:_landmark_detection.py  🎯_landmark_detection.py  💬_Generative_AI_:_large_language_models.py  🖼_Generative_AI_:_image_generation.py
app/sidebar/: __init__.py  sidebar.py
app/sidebar/managers/: __init__.py  lakera_api_manager.py  language_manager.py  model_api_manager.py
config/: models.yaml  providers.yaml
faiss_index/: index.faiss  index.pkl
notebooks/: chatbots.ipynb  face_landmarks.ipynb  image_generation.ipynb
pages/: __init__.py  pages_config.yaml  session_state.py
pages/classification/: multi_class.py  single_class.py  xgboost.py
pages/clustering/: dbscan.py  kmeans.py
pages/dimensionality_reduction/: pca.py  t-sne.py  umap.py
pages/image_generation/: dall_e.py  stable_diffusion.py
pages/landmarks/: pose_landmarks.py
pages/landmarks_detection/: __init__.py  face_landmarks.py  pose_landmarks.py
pages/large_language_models/: __init__.py  chatbot.py  chatbot_rag.py  chatbot_summary.py  chatbot_tools.py  chatbot_web_summary.py  summarize_web.py
pages/object_detection/: face_detection.py  face_landmarks.py  multi_objects.py  pose_landmarks.py
pages/regression/: xgboost.py
pages/statistical_tests/: ab_test.py  chi2_test.py
src/computer_vision/landmarks/: __init__.py  base.py  face_landmarks.py  pose_landmarks.py
src/computer_vision/object_detection/: __init__.py  face_detection.py  multi_objects.py
src/generative_ai/image_generation/: __init__.py  dall_e.py  stable_diffusion.py
src/generative_ai/large_language_models/: __init__.py  callbacks.py  ingest.py  lakera_guard.py
src/generative_ai/large_language_models/chatbots/: __init__.py  chatbot.py  chatbot_rag.py  chatbot_summary.py  chatbot_tools.py  chatbot_web.py  chatbot_web_summary.py
src/image_generation/: __init__.py  dall_e.py  stable_diffusion.py
src/large_language_models/: __init__.py  callbacks.py
src/large_language_models/chatbots/: __init__.py  chatbot.py  chatbot_rag.py  chatbot_tools.py
src/machine_learning/: __init__.py  datasets.py  xgboost_manager.py
src/machine_learning/classification/: __init__.py  classifier.py
src/machine_learning/clustering/: __init__.py  dbscan_manager.py  kmeans_manager.py
src/pages/: _template.py
src/sidebar/: __init__.py  lakera_api_manager.py  language_manager.py  model_api_manager.py  sidebar.py
src/statistics/dimensionality_reduction/: __init__.py  pca.py  pca_manager.py  tsne_manager.py  umap_manager.py
src/statistics/statistical_tests/: __init__.py  ab_test.py  chi_squared.py
utils/: __init__.py  callbacks.py  image_annotation.py  logging.py  misc.py  pages_config.py  secrets.py  shap.py  streamlit_config.py  streamlit_display.py  turn.py
utils/managers/: __init__.py  lakera_guard_api_manager.py  model_api_manager.py
utils/widgets/: __init__.py  lakera.py  language.py
