[tool.poetry]
name = "my-app"
version = "0.0.0"
description = "My personal web app!"
authors = ["Daniel Altunay <daniel.altunay@gmail.com>"]
readme = "README.md"
homepage = "https://daltunay.streamlit.app/"
repository = "https://github.com/daltunay/my-app"
packages = [{ include = "app" }, { include = "src" }, { include = "utils" }]

[tool.poetry.dependencies]
python = "~3.11"
streamlit = "^1.28.1"
extra-streamlit-components = "^0.1.60"
watchdog = "^3.0.0"
opencv-python = "^4.8.1.78"
mediapipe = "^0.10.8"
langchain = "^0.0.339"
openai = "^1.3.5"
together = "^0.2.8"
tiktoken = "^0.5.1"
faiss-cpu = "^1.7.4"
pypdf = "^3.17.1"
google-api-python-client = "^2.108.0"
wikipedia = "^1.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
isort = "^5.12.0"
mypy = "^1.6.1"
ipykernel = "^6.26.0"

[tool.poetry.group.types.dependencies]
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
