[tool.poetry]
name = "my-app"
version = "0.0.0"
description = "My personal web app!"
authors = ["Daniel Altunay <daniel.altunay@gmail.com>"]
readme = "README.md"
homepage = "https://daltunay.streamlit.app/"
repository = "https://github.com/daltunay/my-app"
packages = [{ include = "src" }, { include = "utils" }, { include = "pages" }]

[tool.poetry.dependencies]
python = "~3.11"
streamlit = "^1.28.1"
watchdog = "^3.0.0"
streamlit-superapp = "^1.3.0"
streamlit-webrtc = "^0.47.1"
av = ">=9.0.0,<11.0.0"
twilio = "^8.10.3"
opencv-python-headless = "^4.8.1.78"
mediapipe = "^0.10.8"
langchain = "^0.0.339"
openai = "^1.3.5"
together = "^0.2.8"
tiktoken = "^0.5.1"
faiss-cpu = "^1.7.4"
pypdf = "^3.17.1"
google-api-python-client = "^2.108.0"
wikipedia = "^1.4.0"
unstructured = "^0.11.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
isort = "^5.12.0"
mypy = "^1.6.1"
ipykernel = "^6.26.0"

[tool.poetry.group.types.dependencies]
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
