[tool.poetry]
name = "my-superapp"
version = "0.0.0"
description = "Daniel ALTUNAY's superapp!"
authors = ["Daniel Altunay <daniel.altunay@gmail.com>"]
readme = "README.md"
homepage = "https://data-science-superapp.streamlit.app/"
repository = "https://github.com/daltunay/my-superapp"
packages = [{ include = "src" }, { include = "utils" }, { include = "pages" }]

[tool.poetry.dependencies]
python = "~3.11"
# Streamlit
streamlit = "^1.29.0"
streamlit-superapp = "^1.3.0"
streamlit-webrtc = "^0.47.1"
twilio = "^8.10.3"
watchdog = "^3.0.0"
# Computer Vision
opencv-python-headless = "^4.8.1.78"
av = ">=9.0.0,<11.0.0"
ultralytics = "^8.0.222"
mediapipe = "^0.10.8"
# LLMs
langchain = "^0.0.345"
openai = "^1.3.5"
together = "^0.2.8"
tiktoken = "^0.5.1"
faiss-cpu = "^1.7.4"
transformers = "^4.35.2"
pypdf = "^3.17.1"
unstructured = "^0.11.2"
validators = "^0.22.0"
## Tools
google-api-python-client = "^2.108.0"
arxiv = "^2.0.0"
wikipedia = "^1.4.0"
stackapi = "^0.3.0"
# Machine Learning
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
xgboost = "^2.0.2"
shap = "^0.44.0"
umap-learn = "^0.5.5"
# Data Visualization
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
isort = "^5.12.0"
mypy = "^1.6.1"
ipykernel = "^6.26.0"

[tool.poetry.group.types.dependencies]
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
